// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExpressOpenAPI basic request schema generation 1`] = `
{
  "/ping": {
    "post": {
      "operationId": "ping",
      "parameters": [
        {
          "in": "query",
          "name": "count",
          "required": true,
          "schema": {
            "description": "number of times ping will pong",
            "type": "integer",
          },
        },
      ],
      "requestBody": {
        "content": {
          "application/json": {
            "schema": {
              "$schema": "http://json-schema.org/draft-07/schema#",
              "additionalProperties": false,
              "properties": {
                "type": {
                  "default": "rubber",
                  "enum": [
                    "plastic",
                    "rubber",
                    "wood",
                  ],
                  "type": "string",
                },
              },
              "type": "object",
            },
          },
        },
      },
      "responses": {
        "default": {
          "description": "",
        },
      },
    },
  },
}
`;

exports[`ExpressOpenAPI basic response schema generation 1`] = `
{
  "/ping": {
    "post": {
      "responses": {
        "200": {
          "content": {
            "application/json": {
              "schema": {
                "$schema": "http://json-schema.org/draft-07/schema#",
                "additionalProperties": false,
                "properties": {
                  "pong": {
                    "type": "integer",
                  },
                },
                "required": [
                  "pong",
                ],
                "type": "object",
              },
            },
          },
          "description": "",
          "headers": {
            "x-count": {
              "required": true,
              "schema": {
                "type": "integer",
              },
            },
          },
        },
        "default": {
          "description": "",
        },
      },
    },
  },
}
`;
